changed some styling of list items, added header logo - still might change font, will have to fix sizing error if url is too long

--- a/src/index.css
+++ b/src/index.css
@@ -25,10 +25,11 @@ body {
 
 .logo {
   text-align: center;
-  font-size: 18px;
-  margin-top: -20px;
+  font-size: 26px;
+  margin-top: -35px;
   margin-bottom: 20px;
-
+  font-family: 'Pacifico', cursive;
+  color: #b25151;
 }
 
 .main-form {
@@ -43,7 +44,7 @@ body {
   outline: none;
   border: none;
   border-radius: 15px;
-  padding: 15px 50px 15px 8px;
+  padding: 15px 68px 15px 8px;
   font-size: 15px;
 }
 
@@ -109,12 +110,13 @@ body {
   color: white;
   padding: 15px 15px;
   border-radius: 15px;
-  background: #8585b5;
+  background: #f1f1f1;
   transition: background 0.3s ease;
+  font-family: 'Lato', sans-serif;
 }
 
 .list-item-li a {
-  text-decoration: none !im;
+  text-decoration: none !important;
 }
 
 .swiper-container {
@@ -131,5 +133,6 @@ body {
 }
 
 .swal-modal {
-  width: 230px;
+  width: 296px;
+  font-family: 'Lato', sans-serif;
 }
